<resources>
    <string name="app_name">TaskApp</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="week">This week</string>
    <string name="future">In future</string>

    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>

    <string name="empty_field">Fields can\'t be empty</string>

    <string name="add_subtask">Add subtask</string>
    <string name="subtask">Subtask</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nameView">Name: \</string>
    <string name="dateView">Date: \</string>
    <string name="finishedView">Finished: \</string>
    <string name="daysLeftView">Days left: \</string>
    <string name="priorityView">Priority: \</string>


    <string-array name="priorities">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
</resources>