<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="save"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:onClick="cancel"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="391dp"
        android:layout_height="702dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="70dp"
                android:layout_height="46dp"
                android:text="@string/name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etxtName"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="69dp"
                android:layout_height="40dp"
                android:text="@string/date"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtDatePick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="pickDate"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="41dp">

            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/priorities" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cbNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn_add_subtask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addSubtask"
                android:text="@string/add_subtask" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>